// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimesCarousel > useSliding renders default 1`] = `
{
  "hasNext": true,
  "hasPrev": false,
  "slideProps": {
    "style": {
      "pointerEvents": "all",
      "transform": "translate3d(50px, 0, 0)",
    },
  },
  "sliding": false,
  "totalInViewport": 2,
  "viewed": 0,
}
`;

exports[`AnimesCarousel > useSliding renders when clicking next/prev: Clicked next 1`] = `
{
  "hasNext": false,
  "hasPrev": true,
  "slideProps": {
    "style": {
      "pointerEvents": "none",
      "transform": "translate3d(-10px, 0, 0)",
    },
  },
  "sliding": true,
  "totalInViewport": 2,
  "viewed": 2,
}
`;

exports[`AnimesCarousel > useSliding renders when clicking next/prev: Clicked prev 1`] = `
{
  "hasNext": true,
  "hasPrev": false,
  "slideProps": {
    "style": {
      "pointerEvents": "none",
      "transform": "translate3d(50px, 0, 0)",
    },
  },
  "sliding": true,
  "totalInViewport": 2,
  "viewed": 0,
}
`;

exports[`AnimesCarousel > useSliding renders when clicking next/prev: Finished sliding next 1`] = `
{
  "hasNext": false,
  "hasPrev": true,
  "slideProps": {
    "style": {
      "pointerEvents": "all",
      "transform": "translate3d(-10px, 0, 0)",
    },
  },
  "sliding": false,
  "totalInViewport": 2,
  "viewed": 2,
}
`;

exports[`AnimesCarousel > useSliding renders when clicking next/prev: Finished sliding prev 1`] = `
{
  "hasNext": true,
  "hasPrev": false,
  "slideProps": {
    "style": {
      "pointerEvents": "all",
      "transform": "translate3d(50px, 0, 0)",
    },
  },
  "sliding": false,
  "totalInViewport": 2,
  "viewed": 0,
}
`;
